--- a/calc/app.css
+++ b/calc/app.css
@@ -22,7 +22,7 @@ main{
 main > * {
   scroll-snap-align: start;
   height: 100%;
-  min-width: 95vw;
+  min-width: 98vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -45,7 +45,7 @@ body {
   .blocos{transform: rotate(-90deg);height: 90vw !important;}
 }
 
-#titulo {text-align: center;justify-content: center;align-items: center;display: flex;flex-direction: column;background-color: deepskyblue;}
+#titulo {text-align: center;justify-content: center;align-items: center;display: flex;flex-direction: column;background-color: darkblue;}
 #grafico {display: flex;justify-content: center;align-items: center;background-color: #ffc107;}
 #cards{background-color: darkblue;}
 #card {perspective: 1000px; text-align: center;font-size: 0.8rem;/* justify-content: center; *//* align-items: center; *//* display: flex; */}
@@ -53,23 +53,30 @@ body {
 h1,h2 {
   text-transform: uppercase;
   letter-spacing: 3px;
-  color: darkblue;
-  margin: 0;
-  width: 70vw;}
+  width: 70vw;
+  color: white;
+  }
 
 h1{
   text-decoration: underline dotted;
   font-size: 2rem;}
 
 h2 {
-  font-size: 0.8rem !important;font-weight: 500;line-height: 1;margin-top: 20px;}
+  font-size: 0.75rem !important;
+  font-weight: bold;
+  line-height: 1;
+  margin-bottom: 20px;
+  color: white;
+  }
 
 p {
-  
-  font-size: 1.2rem;
-  text-transform: uppercase;
-  letter-spacing: 0.2rem;
-  font-weight: normal;width: 50vw;}
+  font-size: 0.5rem;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  font-weight: normal;
+  width: 50vw;
+  color: orangered;
+  }
 
 input {
   all: unset;
@@ -80,7 +87,9 @@ input {
   background: White;
   text-align: center;
   font-size: 2.5rem;
-  color: orangered;}
+  color: orangered;
+  letter-spacing: 3px;
+  }
 
 input::placeholder{
   color: orangered;
@@ -97,12 +106,17 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
-a {
-  color: inherit;
-}
-
-a:hover {
-  color: DeepPink;
+#btnmostrar{
+  width: 175px;
+  padding: 10px;
+  border-radius: 20px;
+  text-transform: uppercase;
+  font-size: 1rem;
+  font-weight: bold;
+  color: orangered;
+  border: 2px solid #eee;
+  background-color: white;
+  margin-top: 20px;
 }
 
 .blocos {
