--- a/calc/app.css
+++ b/calc/app.css
@@ -17,10 +17,9 @@ main{
 main > * {
   scroll-snap-align: start;
   height: 100%;
-  min-width: 98vw;
+  min-width: 99vw;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 body {
@@ -36,14 +35,15 @@ body {
   padding: 0;
 }
 
+/* and (max-height: 400px) */
+
 @media (min-aspect-ratio: 1 / 1) {
-  .blocos{transform: rotate(-90deg);height: 90vw !important;}
-  .mostrar::before{font-size: 1.5rem;}
-  .blocos > div::after{font-size: 1.2rem !important;left: 26.5rem !important;}
+  .blocos{transform: rotate(-90deg);transform-style: preserve-3d;}
+  .voce{transform: rotate(-90deg);}
 }
 
 #titulo {text-align: center;justify-content: center;align-items: center;display: flex;flex-direction: column;background: linear-gradient(cyan, darkblue);/* background: url(titulo.gif); *//* background-size: cover; *//* background-blend-mode: luminosity; *//* background-color: white; */}
-#grafico {display: flex;justify-content: center;align-items: center;background: linear-gradient(#ffc107, orangered);}
+#grafico {display: grid;background: linear-gradient(#ffc107, orangered);}
 #cards{background: linear-gradient(darkblue, #9c27b0);}
 #card {perspective: 1000px;text-align: center;font-size: 0.9rem;/* justify-content: center; *//* align-items: center; *//* display: flex; */filter: drop-shadow(2px 2px 2px #00008C33);}
 
@@ -57,19 +57,19 @@ h1,h2 {
 
 h1{
   text-decoration: underline dotted;
-  font-size: 3rem;
+  font-size: 2.5rem;
+  margin: 0;
 }
 
 h2 {
   font-size: 0.75rem !important;
   font-weight: bold;
   line-height: 1;
-  margin-bottom: 20px;
   color: orange;
 }
 
 p {
-  font-size: 0.65rem;
+  font-size: 0.5rem;
   text-transform: uppercase;
   letter-spacing: 0.2rem;
   font-weight: normal;
@@ -114,8 +114,7 @@ input[type=number] {
   border-radius: 10px;
   color: #FFFFFF;
   cursor: pointer;
-  padding: 6px 16px;
-  margin-top: 20px;
+  padding: 6px 18px;
   font-weight: bold;
   text-transform: uppercase;
   filter: drop-shadow(2px 2px 2px #00008C66);
@@ -134,57 +133,95 @@ input[type=number] {
 
 .blocos {
   display: flex;
-  width: 50vmin;
-  height: 80vh;
-  flex-direction: column;
+  width: 70vmin;
+  height: 85vh;
   justify-content: center;
+  flex-direction: column;
+  gap: 0.2rem;
+  grid-area: grafico;
+  z-index: 2;
+}
+
+.blocos > div.mostrar {
+  background: #0000ee;
+  transition: all 1s ease-in-out 500ms;
+  color: antiquewhite;
+  text-align: center;
   }
 
 .blocos > div {
   background: darkblue;
-}
-
-.blocos > div.mostrar {
-  background: #eee;
-  color: #eee;
-  /* transition: all 1s ease-in-out 0s; */
-  }
-
-.blocos > div {
-  margin: 2px;
   width: 100%;
   position: relative;
   display: grid;
   grid-template-areas:
-  "gnumero"
-  "gnome";
-  grid-template-rows: 0 1fr;
-  }
+    "gnumero"
+    "gnome";
+  grid-template-rows: 0fr 1fr;
+}
 
-.mostrar::before {
-  content: attr(data-before) !important;
-  font-weight: 500;
-  color: darkblue;
-  line-height: 1;
-  transition: all 1s ease-in-out 0s;
-  position: absolute;
-  grid-area: gnome;
-  top: 40%;
-  /* right: -2rem; */
-  width: 100%;
-  filter: drop-shadow(2px 2px 2px #00008C77);
-  text-align: center;
-  }
-
-.blocos > div::after {
+.blocos > div::before {
   content: attr(data-de);
-  position: relative;
+  position: absolute;
   letter-spacing: 0.15rem;
   grid-area: gnumero;
-  font-size: 0.9rem;
-  right: 2.8rem;
-  top: -0.1rem;
+  right: -0.3rem;
   filter: drop-shadow(2px 2px 2px #00008C77);
+  text-align: left;
+  width: 100%;
+  color: white;
+  font-size: 1.2rem;
+}
+
+#nomegeracao{
+  grid-area: gnome;
+  position: relative;
+  justify-self: center;
+  align-self: center;
+  font-size: 1.2rem;
+}
+
+/* .mostrar::after {
+  content: attr(data-ano) !important;
+  font-weight: 500;
+  color: antiquewhite;
+  position: absolute;
+  grid-area: anonasc;
+  filter: drop-shadow(2px 2px 2px #00008C77);
+  left: -2.5rem;
+  font-size: 1rem;
+  top: -10vmin;
+  justify-self: left;
+} */
+
+#marcador{
+  display: flex;
+  align-items: end;
+  justify-content: flex-end;
+  height: 0%;
+  transition: all 1s ease-in-out 1s;
+  color: #0000ee;
+  border-bottom: 3px dotted #0000ee;
+  filter: drop-shadow(1px 1px 1px #00008C22);
+}
+
+.voce {
+  display: flex;
+  width: 70vmin;
+  height: 85vh;
+  gap: 0.2rem;
+  flex-direction: column;
+  grid-area: voce;
+  z-index: 1;
+}
+
+.voce > div.mostrar {
+  transition: all 1s ease-in-out 1s;
+  width: 115%;
+}
+
+.voce > div {
+  width: 100%;
 }
 
 #card-i{
@@ -237,4 +274,4 @@ input[type=number] {
   padding: 10px;
   align-content: center;
   justify-items: center;
-  }
+}
