--- a/calc/app2.css
+++ b/calc/app2.css
@@ -38,14 +38,32 @@ body {
 }
 
 #titulo {
-  background-image: linear-gradient(-45deg,
+  /* background-image: linear-gradient(-45deg,
   darkblue 0%,
   darkblue 35%,
   orangered 75%,
-  yellow 100%);
-  animation: moveBg 5s ease infinite;
-  background-size: 300% 300%;
+  yellow 100%); */
+  /* animation: moveBg 5s ease infinite; */
+  /* background-size: 300% 300%; */
+  overflow: hidden;
+  overflow: clip;
+  contain: content;
+  display: grid;
+  justify-content: center;
   }
+
+#titulo > css-doodle {
+  grid-area: titulo;
+  } 
+
+#titulo > div {
+  display: grid;
+  justify-items: center;
+  width: 100vw;
+  height: 100vh;
+  grid-area: titulo;
+  align-content: center;
+} 
 
 #grafico {
   display: grid;
@@ -57,7 +75,7 @@ body {
   yellow 40%,
   lime 70%,
   lightgreen 100%);
-  animation: moveBg 10s ease infinite;
+  animation: moveBg 5s ease infinite;
   background-size: 300% 300%;
 }
 
@@ -67,7 +85,7 @@ body {
   #9c27b0 30%,
   darkblue 50%,
   darkblue 100%);
-  animation: moveBg 15s ease infinite;
+  animation: moveBg 10s ease infinite;
   background-size: 300% 300%;
 }
 
