--- a/calc/app.css
+++ b/calc/app.css
@@ -17,7 +17,7 @@ main{
 main > * {
   scroll-snap-align: start;
   height: 100%;
-  min-width: 98.5%;
+  min-width: 100%;
   display: grid;
   justify-items: center;
   align-content: center;
@@ -52,26 +52,22 @@ body {
   grid-template-areas:
     "grafico";
   grid-template-rows: 90% 1fr;
-  background-image: linear-gradient(-45deg,
-  lime 0%,
-  yellow 40%,
-  lime 70%,
-  lightgreen 100%);
+  background-image: linear-gradient(-45deg,  DeepPink 0%,  yellow 40%,  lime 50%,  Gold 100%);
   animation: moveBg 10s ease infinite;
   background-size: 300% 300%;
 }
 
 #cards{
   background-image: linear-gradient(-45deg,
-  #9c27b0 0%,
-  #9c27b0 30%,
-  darkblue 50%,
-  darkblue 100%);
+  firebrick 0%,
+  fuchsia 40%,
+  darkblue 75%,
+  cyan 100%);
   animation: moveBg 15s ease infinite;
   background-size: 300% 300%;
 }
 
-#card {perspective: 1000px;text-align: center;font-size: 0.9rem;filter: drop-shadow(2px 2px 2px #00008C33);display: grid;align-content: center;justify-content: center;}
+#card {perspective: 1000px;text-align: center;font-size: 0.9rem;filter: drop-shadow(2px 2px 2px #00008C33);display: grid;align-content: center;justify-content: center;grid-template-columns: 1fr;}
 
 @keyframes moveBg {
   0%{background-position:0% 25%}
@@ -89,7 +85,7 @@ h1,h2 {
 
 h1{
   text-decoration: underline dotted;
-  font-size: 2.5rem;
+  font-size: 2rem;
   margin: 0;
 }
 
@@ -168,7 +164,7 @@ input[type=number] {
   #grafico > div{
     transform: rotate(-90deg);
     transform-style: preserve-3d;
-    height: 150% !important;
+    height: 140% !important;
     width: 22% !important;
   }
 }
@@ -179,7 +175,7 @@ input[type=number] {
   height: 70%;
   justify-content: center;
   flex-direction: column;
-  gap: 0.2rem;
+  /* gap: 0.2rem; */
   grid-area: grafico;
 }
 
@@ -188,9 +184,8 @@ input[type=number] {
 }
 
 .blocos > div.mostrar {
-  background: #00000075;
+  background: #00000099;
   transition: all 1s ease-in-out 1s;
-  text-align: center;
   }
 
 .blocos > div {
@@ -209,33 +204,42 @@ input[type=number] {
   position: absolute;
   letter-spacing: 0.1rem;
   grid-area: gnumero;
-  right: 2.3rem;
+  left: -20%;
   filter: drop-shadow(1px 1px 1px #00000050);
   text-align: left;
-  width: 100%;
+  width: 120%;
   font-size: 0.8rem;
   color: black;
+  border-top: 2px solid #00000050;
 }
 
 #nomegeracao{
   grid-area: gnome;
-  position: relative;
-  justify-self: center;
+  position: absolute;
   align-self: center;
   font-size: 1.2rem;
   z-index: 3;
   color: white;
+  filter: drop-shadow(2px 2px 1px #00000050);
+  left: 5%;
 }
 
 #marcador{
   display: flex;
-  align-items: end;
-  justify-content: flex-end;
-  height: 0%;
-  transition: all 1s ease-in-out 5s;
-  border-bottom: 3px solid #FFFFFF70;
-  color: white;
-  filter: drop-shadow(1px 1px 1px #00000075);
+  justify-content: space-between;
+  border-bottom: 2px solid orangered;
+  color: orangered;
+  font-size: 1.2rem;
+  font-weight: bold;
+  align-items: flex-end;
+  height: 0;
+}
+
+#marcador::before{
+  content: "ANO DE NASCIMENTO";
+  font-size: 0.5rem;
+  width: 75%;
+  text-align: right;
 }
 
 .voce {
@@ -243,23 +247,26 @@ input[type=number] {
 }
 
 .voce > div.mostrar {
-  transition: all 1s ease-out 1s;
-  width: 120%;
+  transition: all 3s ease-out 1s;
+  width: 121%;
+  opacity: 1;
 }
 
 .voce > div {
-  width: 0px;
+  width: 100%;
+  opacity: 0;
 }
 
 #card-i{
-  width: 67vw;
-  height: 65vh;
+  width: 85vw;
+  height: 80vw;
   transition: transform 1s 1s;
   transform-style: preserve-3d;
   display: grid;
   justify-items: center;
   align-items: center;
-  width: 340px;
+  max-width: 400px;
+  max-height: 350px;
   }
 
 #card-i.virar {
@@ -268,14 +275,10 @@ input[type=number] {
 
 #card-f,#card-v{
   position: absolute;
-  max-width: 340px;
-  height: 300px;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
-  width: 90%;
-  height: 60%;
-  max-width: 350px;
-  max-height: 450px;
+  width: 100%;
+  height: 100%;
 }
 
 #card-f{
