--- a/calc/app.css
+++ b/calc/app.css
@@ -39,11 +39,11 @@ body {
 
 #titulo {
   background-image: linear-gradient(-45deg,
-  darkblue 0%,
-  darkblue 35%,
+  cyan 5%,
+  darkblue 25%,
   orangered 75%,
-  yellow 100%);
-  animation: moveBg 5s ease infinite;
+  yellow 90%);
+  animation: moveBg 30s cubic-bezier(0.4, 0, 0.2, 1) infinite;
   background-size: 300% 300%;
   }
 
@@ -52,16 +52,16 @@ body {
   grid-template-areas:
     "grafico";
   grid-template-rows: 90% 1fr;
-  background-image: linear-gradient(-45deg,  DeepPink 0%,  yellow 40%,  lime 50%,  Gold 100%);
-  animation: moveBg 10s ease infinite;
+  background-image: linear-gradient(-45deg,  White 0%, Cornsilk 10%,  Gold 50%,  HotPink 100%);
+  animation: moveBg 30s cubic-bezier(0.4, 0, 0.2, 1) infinite;
   background-size: 300% 300%;
 }
 
 #cards{
   background-image: linear-gradient(-45deg,
   firebrick 0%,
-  fuchsia 40%,
-  darkblue 75%,
+  fuchsia 30%,
+  darkblue 60%,
   cyan 100%);
   animation: moveBg 15s ease infinite;
   background-size: 300% 300%;
@@ -85,7 +85,7 @@ h1,h2 {
 
 h1{
   text-decoration: underline dotted;
-  font-size: 2rem;
+  font-size: 3rem;
   margin: 0;
 }
 
