--- a/calc/app.css
+++ b/calc/app.css
@@ -77,48 +77,53 @@ body {
 
 h1,h2 {
   text-transform: uppercase;
-  letter-spacing: 3px;
-  width: 65vw;
+  letter-spacing: 0.3rem;
   color: white;
   filter: drop-shadow(2px 2px 2px #00008C66);
+  width: 80vw;
+  max-width: 450px;
 }
 
 h1{
   text-decoration: underline dotted;
-  font-size: 3rem;
   margin: 0;
+  font-size: 3rem;
+  font-size: clamp(2rem, 3vw + 2rem, 5rem);
 }
 
 h2 {
-  font-size: 0.75rem !important;
   font-weight: bold;
   line-height: 1;
   color: orange;
+  font-size: 1rem;
+  font-size: clamp(0.75rem, 1vw + 0.25rem, 1rem);
 }
 
 p {
-  font-size: 0.7rem;
   text-transform: uppercase;
   letter-spacing: 0.2rem;
   font-weight: normal;
   width: 50vw;
   color: white;
   filter: drop-shadow(2px 2px 2px #00008C66);
+  font-size: 0.75rem;
+  font-size: clamp(0.5rem, 1vw + 0.25rem, 0.75rem);
 }
 
 input {
   all: unset;
-  width: 125px;
   padding: 0 8px;
   border-radius: 20px;
   border: 1px solid orangered;
   background: White;
   text-align: center;
-  font-size: 2rem;
   color: white;
   letter-spacing: 3px;
   background-image: linear-gradient(orange, orangered);
   filter: drop-shadow(2px 2px 2px #00008C66);
+  font-size: 2rem;
+  font-size: clamp(2rem, 2vw + 1rem, 3rem);
+  width: clamp(7rem, 7vw + 2rem, 9rem);
 }
 
 input::placeholder{
@@ -142,11 +147,12 @@ input[type=number] {
   border-radius: 10px;
   color: #FFFFFF;
   cursor: pointer;
-  padding: 6px 18px;
+  padding: 12px 20px;
   font-weight: bold;
   text-transform: uppercase;
   filter: drop-shadow(2px 2px 2px #00008C66);
   transition: all 500ms ease-in;
+  font-size: 1rem;
 }
 
 .btnmostrar:disabled {
@@ -164,8 +170,8 @@ input[type=number] {
   #grafico > div{
     transform: rotate(-90deg);
     transform-style: preserve-3d;
-    height: 140% !important;
-    width: 22% !important;
+    height: 90vw !important;
+    width: 55vh !important;
   }
 }
 
@@ -208,9 +214,10 @@ input[type=number] {
   filter: drop-shadow(1px 1px 1px #00000050);
   text-align: left;
   width: 120%;
-  font-size: 0.8rem;
   color: black;
   border-top: 2px solid #00000050;
+  font-size: 0.8rem;
+  font-size: clamp(0.5rem, 0.5vmax + 0.5rem, 3rem);
 }
 
 #nomegeracao{
@@ -229,10 +236,11 @@ input[type=number] {
   justify-content: space-between;
   border-bottom: 2px solid orangered;
   color: orangered;
-  font-size: 1.2rem;
   font-weight: bold;
   align-items: flex-end;
   height: 0;
+  font-size: 1.2rem;
+  font-size: clamp(0.5rem, 1vmax + 0.75rem, 3rem);
 }
 
 #marcador::before{
