--- a/calc/images/app2.css
+++ b/calc/images/app2.css
@@ -170,8 +170,8 @@ input[type=number] {
   #grafico > div{
     transform: rotate(-90deg);
     transform-style: preserve-3d;
-    height: 90vw !important;
-    width: 55vh !important;
+    height: 140% !important;
+    width: 22% !important;
   }
 }
 
@@ -214,10 +214,9 @@ input[type=number] {
   filter: drop-shadow(1px 1px 1px #00000050);
   text-align: left;
   width: 120%;
+  font-size: 0.8rem;
   color: black;
   border-top: 2px solid #00000050;
-  font-size: 0.8rem;
-  font-size: clamp(0.5rem, 0.5vmax + 0.5rem, 3rem);
 }
 
 #nomegeracao{
@@ -236,11 +235,10 @@ input[type=number] {
   justify-content: space-between;
   border-bottom: 2px solid orangered;
   color: orangered;
+  font-size: 1.2rem;
   font-weight: bold;
   align-items: flex-end;
   height: 0;
-  font-size: 1.2rem;
-  font-size: clamp(0.5rem, 1vmax + 0.75rem, 3rem);
 }
 
 #marcador::before{
@@ -314,72 +312,3 @@ input[type=number] {
   align-content: center;
   justify-items: center;
 }
-
-#infos{
-  
-}
-
-#poster{
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  gap: 0px 0px;
-  grid-template-areas:
-    "area1 area1 area1 area1 area1 area1"
-    "area1 area1 area1 area1 area1 area1"
-    "area1 area1 area1 area1 area1 area1"
-    "area1 area1 area1 area1 area1 area1"
-    "area2 area2 area2 area3 area3 area3"
-    "area2 area2 area2 area3 area3 area3"
-    "area2 area2 area2 area3 area3 area3"
-    "area2 area2 area2 area4 area4 area4"
-    "area2 area2 area2 area4 area4 area4"
-    "area2 area2 area2 area4 area4 area4"
-    "area5 area5 area5 area5 area5 area5"
-    "area5 area5 area5 area5 area5 area5"
-    "area5 area5 area5 area5 area5 area5";
-  width: 100vw;
-  height: 100vh;
-  max-width: 500px;
-}
-
-#poster > * {
-  background-size: cover;
-  background-position: center;
-}
-
-#area1 {
-        grid-area: area1;
-        width: 100%;
-        height: 100%;
-        background-color: green;
-        background-image: url(images/1883-1.gif);
-      }
-#area2 {
-        grid-area: area2;
-        width: 100%;
-        height: 100%;
-        background-color: firebrick;
-        background-image: url(images/1883-2.gif);
-      }
-#area3 {
-        grid-area: area3;
-        width: 100%;
-        height: 100%;
-        background-color: darkblue;
-        background-image: url(images/1883-3.webp);
-      }
-#area4 {
-        grid-area: area4;
-        width: 100%;
-        height: 100%;
-        background-color: white;
-        background-image: url(images/1883-4.webp);
-      }
-#area5 {
-        grid-area: area5;
-        width: 100%;
-        height: 100%;
-        background-color: orangered;
-        background-image: url(images/1883-5.gif);
-      }
