--- a/calc/app2.css
+++ b/calc/app2.css
@@ -314,3 +314,89 @@ input[type=number] {
   align-content: center;
   justify-items: center;
 }
+
+#infos{
+  
+}
+
+#poster{
+  display: grid;
+  grid-template-columns: 1fr; 
+  grid-template-rows: 95vh 95vh 95vh 95vh; 
+  grid-template-areas: 
+    "area1"
+    "area2"
+    "area3"
+    "area4"; 
+  gap: 0px 0px;
+  scroll-snap-type: y mandatory;
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: 100vh;
+  width: 100vw;
+}
+
+#poster > * {
+  background-size: cover;
+  background-position: center;
+  scroll-snap-align: start;
+  height: 100%;
+  min-width: 100%;
+  display: grid;
+  justify-items: center;
+  align-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+#area1 {
+        grid-area: area1;
+        width: 100%;
+        height: 100%;
+        background-color: green;
+        background-image: url(images/1883-1.gif);
+        background-size: contain;
+      }
+#area2 {
+        grid-area: area2;
+        width: 100%;
+        height: 100%;
+        background-color: firebrick;
+        background-image: url(images/1883-2.gif);
+        background-position-x: 65%;
+      }
+#area3 {
+        grid-area: area3;
+        width: 100%;
+        height: 100%;
+        background-color: darkblue;
+        background-image: url(images/1883-3.webp);
+      }
+#area4 {
+        grid-area: area4;
+        width: 100%;
+        height: 100%;
+        background-color: white;
+        background-image: url(images/1883-4.webp);
+      }
+
+@media (min-aspect-ratio: 1 / 1) {
+
+  #poster{
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; 
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; 
+  }
+
+  #area1 {
+    grid-area: 1 / 1 / 6 / 6;
+  }
+  #area2 {
+      grid-area: 1 / 5 / 10 / 10; 
+    }
+  #area3 {
+      grid-area: 6 / 1 / 10 / 5; 
+    }
+  #area4 {
+      grid-area: 4 / 4 / 9 / 7;
+    }
+}
