--- a/calc/app.css
+++ b/calc/app.css
@@ -55,6 +55,9 @@ body {
   background-image: linear-gradient(-45deg,  White 0%, Cornsilk 10%,  Gold 50%,  HotPink 100%);
   animation: moveBg 30s cubic-bezier(0.4, 0, 0.2, 1) infinite;
   background-size: 300% 300%;
+  scroll-snap-type: y proximity;
+  overflow-y: auto;
+  align-items: self-start;
 }
 
 #cards{
@@ -80,15 +83,17 @@ h1,h2 {
   letter-spacing: 0.3rem;
   color: white;
   filter: drop-shadow(2px 2px 2px #00008C66);
-  width: 80vw;
-  max-width: 450px;
 }
 
 h1{
   text-decoration: underline dotted;
   margin: 0;
   font-size: 3rem;
-  font-size: clamp(2rem, 3vw + 2rem, 5rem);
+  font-size: clamp(2rem, 2vmax + 1.5rem, 5rem);
+  aspect-ratio: 4/2;
+  height: 12vmax;
+  margin-top: clamp(1rem, 0.5vmax + 0.5rem, 15rem);
+  line-height: 1.2;
 }
 
 h2 {
@@ -96,7 +101,8 @@ h2 {
   line-height: 1;
   color: orange;
   font-size: 1rem;
-  font-size: clamp(0.75rem, 1vw + 0.25rem, 1rem);
+  font-size: clamp(0.1rem, 1vmax + 0.25rem, 1rem);
+  margin-top: clamp(2rem, 1vmax + 3rem, 15rem);
 }
 
 p {
@@ -107,7 +113,8 @@ p {
   color: white;
   filter: drop-shadow(2px 2px 2px #00008C66);
   font-size: 0.75rem;
-  font-size: clamp(0.5rem, 1vw + 0.25rem, 0.75rem);
+  font-size: clamp(0.1rem, 1vw + 0.25rem, 0.75rem);
+  line-height: 1;
 }
 
 input {
@@ -122,7 +129,7 @@ input {
   background-image: linear-gradient(orange, orangered);
   filter: drop-shadow(2px 2px 2px #00008C66);
   font-size: 2rem;
-  font-size: clamp(2rem, 2vw + 1rem, 3rem);
+  font-size: clamp(1rem, 2vw + 1rem, 2.5rem);
   width: clamp(7rem, 7vw + 2rem, 9rem);
 }
 
@@ -152,7 +159,7 @@ input[type=number] {
   text-transform: uppercase;
   filter: drop-shadow(2px 2px 2px #00008C66);
   transition: all 500ms ease-in;
-  font-size: 1rem;
+  font-size: 0.75rem;
 }
 
 .btnmostrar:disabled {
@@ -167,32 +174,42 @@ input[type=number] {
 }
 
 @media (min-aspect-ratio: 1 / 1) {
+  #grafico{
+    align-items: center;
+  }
+  
   #grafico > div{
     transform: rotate(-90deg);
     transform-style: preserve-3d;
     height: 90vw !important;
     width: 55vh !important;
+    margin: 0;
+  }
+
+  #grafico > * > div:last-child{
+    scroll-padding: 0;
   }
 }
 
 #grafico > div{
   display: flex;
   width: 65%;
-  height: 70%;
+  height: 300vh;
   justify-content: center;
   flex-direction: column;
-  /* gap: 0.2rem; */
   grid-area: grafico;
+  scroll-snap-align: end;
+  margin: 10vh 0;
 }
 
-.blocos {
-  z-index: 1;
+#grafico > * > div:last-child{
+  margin-bottom: 5vh;
 }
 
 .blocos > div.mostrar {
   background: #00000099;
   transition: all 1s ease-in-out 1s;
-  }
+}
 
 .blocos > div {
   background: #00000050;
@@ -217,37 +234,39 @@ input[type=number] {
   color: black;
   border-top: 2px solid #00000050;
   font-size: 0.8rem;
-  font-size: clamp(0.5rem, 0.5vmax + 0.5rem, 3rem);
+  font-size: clamp(0.5rem, 0.5vmax + 0.6rem, 3rem);
 }
 
 #nomegeracao{
   grid-area: gnome;
   position: absolute;
   align-self: center;
-  font-size: 1.2rem;
   z-index: 3;
   color: white;
   filter: drop-shadow(2px 2px 1px #00000050);
   left: 5%;
+  font-size: 1.2rem;
+  font-size: clamp(0.1vmax, 1.5vmax + 0.5rem, 3rem);
 }
 
 #marcador{
   display: flex;
   justify-content: space-between;
-  border-bottom: 2px solid orangered;
-  color: orangered;
+  border-bottom: 2px solid red;
+  color: red;
   font-weight: bold;
   align-items: flex-end;
   height: 0;
   font-size: 1.2rem;
-  font-size: clamp(0.5rem, 1vmax + 0.75rem, 3rem);
+  font-size: clamp(1.2rem, 1vmax + 1rem, 4rem);
 }
 
 #marcador::before{
   content: "ANO DE NASCIMENTO";
-  font-size: 0.5rem;
   width: 75%;
   text-align: right;
+  font-size: 0.5rem;
+  font-size: clamp(0.5rem, 1vmin + 0.4rem, 3rem);
 }
 
 .voce {
